мелкая сетка блоков без выделенного красным

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -20,13 +20,13 @@
           </button>
           <ul class="navigation__list site-list">
             <li class="site-list__item">
-              <a class="site-list__link" href="index.html">Главная</a>
+              <a class="site-list__link site-list__link--color" href="index.html">Главная</a>
             </li>
             <li class="site-list__item site-list__item--active">
-              <a class="site-list__link">Каталог продукции</a>
+              <a class="site-list__link site-list__link--color">Каталог продукции</a>
             </li>
             <li class="site-list__item">
-              <a class="site-list__link" href="form.html">Подбор программы</a>
+              <a class="site-list__link site-list__link--color" href="form.html">Подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -40,63 +40,168 @@
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
-                            <p class="catalog__text">Объем 500 г Вкус Курица Цена 700 р</p>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>500 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Курица</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>700 р</td>
+                                </tr>
+                              </table>
+                            </div>
                             <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
-                            <p class="catalog__text">Объем 1000 г Вкус Курица Цена 1000 р</p>
-                            <a class="catalog__order" href="#">Заказать</a>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>1000 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Курица</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>1000 р</td>
+                                </tr>
+                            </table>
+                            </div>
+                          <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
-                            <p class="catalog__text">Объем 500 г Вкус Рыба Цена 700 р</p>
-                            <a class="catalog__order" href="#">Заказать</a>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>500 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Рыба</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>700 р</td>
+                                </tr>
+                            </table>
+                            </div>
+                          <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
-                            <p class="catalog__text">Объем 1000 г Вкус Рыба Цена 1000 р</p>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>1000 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Рыба</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>1000 р</td>
+                                </tr>
+                              </table>
+                            </div>
                             <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
-                            <p class="catalog__text">Объем 500 г Вкус Гречка Цена 400 р</p>
-                            <a class="catalog__order" href="#">Заказать</a>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>500 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Гречка</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>400 р</td>
+                                </tr>
+                            </table>
+                          </div>
+                          <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim1000">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
-                            <p class="catalog__text">Объем 1000 г Вкус Гречка Цена 700 р</p>
-                            <a class="catalog__order" href="#">Заказать</a>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>1000 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Гречка</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>700 р</td>
+                                </tr>
+                            </table>
+                            </div>
+                          <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <article class="catalog__item">
                             <img class="catalog__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
+                            <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
-                            <p class="catalog__text">Объем 500 г Вкус Рис Цена 500 р</p>
+                            <table class="catalog__text">
+                                <tr>
+                                  <td>Объем</td>
+                                  <td>500 г</td>
+                                </tr>
+                                <tr>
+                                    <td>Вкус</td>
+                                    <td>Рис</td>
+                                </tr>
+                                <tr>
+                                    <td>Цена</td>
+                                    <td>500 р</td>
+                                </tr>
+                            </table>
+                            </div>
                             <a class="catalog__order" href="#">Заказать</a>
                         </article>
                     </li>
                     <li>
                         <a class="view-more">
                             <h2 class="visually-hidden">Показать больше</h2>
-                            <span>+</span>
+                            <span class="view-more__plus">+</span>
                             <b class="view-more__title">Показать еще 100500 товаров</b>
                             <p class="view-more__text">На самом деле вкусов гораздо больше!</p>
                             <button class="view-more__button button" type="button">Показать все</button>
@@ -111,22 +216,42 @@
                 <ul class="other-goods__list">
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Сахарозаменитель</a></h3>
-                        <p class="other-goods__description">1 упаковка (100г) 200 р.</p>
+                          <table class="other-goods__description">
+                            <tr>
+                              <td>1 упаковка (100г)</td>
+                              <td>200 р.</td>
+                            </tr>
+                          </table>
                         <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Питьевая вода</a></h3>
-                        <p class="other-goods__description">5 литров 50 р.</p>
+                        <table class="other-goods__description">
+                            <tr>
+                              <td>5 литров</td>
+                              <td>50 р.</td>
+                            </tr>
+                        </table>
                         <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Молоко</a></h3>
-                        <p class="other-goods__description">1 литр 100 р.</p>
+                        <table class="other-goods__description">
+                            <tr>
+                              <td>1 литр</td>
+                              <td>100 р.</td>
+                            </tr>
+                        </table>
                         <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                     <li class="other-goods__item">
                         <h3 class="other-goods__item-title"><a class="other-goods__link" href="#">Витамины</a></h3>
-                        <p class="other-goods__description">1 упаковка (300г) 300 р.</p>
+                        <table class="other-goods__description">
+                            <tr>
+                              <td>1 упаковка (300г)</td>
+                              <td>300 р.</td>
+                            </tr>
+                          </table>
                         <a class="other-goods__order button" href="#">Заказать</a>
                     </li>
                 </ul>
@@ -136,7 +261,19 @@
             <div class="gift__wrapper">
                 <a class="gift__link" href="#">
                     <h2 class="visually-hidden">Получи подарок</h2>
-                    <img class="gift__img" src="img/icon-gift.svg" width="55" height="60" alt="Подарок">
+                    <svg class="gift__img" version="1.1" width="55" height="60" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 55.5 60" style="enable-background:new 0 0 55.5 60;" xml:space="preserve">
+                      <title>Подарок</title>
+                      <path
+                        d="M52.3,12.2h-7c0.5-0.7,0.8-1.4,1.1-2.2c0.6-2,0.4-4.1-0.6-5.9c-1-1.8-2.6-3.1-4.6-3.7c-2-0.6-4.1-0.4-5.9,0.6
+                      c-3.6,2-6.2,6.1-7.6,9c-1.4-2.9-4-7.1-7.6-9c-3.8-2-8.5-0.6-10.5,3.1c-1.4,2.7-1.2,5.8,0.5,8.1h-7c-1.7,0-3.1,1.4-3.1,3.1v9.4
+                      c0,1.7,1.4,3.1,3.1,3.1H4v26.1c0,3.3,2.7,6,6,6h35.5c3.3,0,6-2.7,6-6V27.8h0.8c1.7,0,3.1-1.4,3.1-3.1v-9.4
+                      C55.5,13.6,54.1,12.2,52.3,12.2z M36.5,3c1.3-0.7,2.7-0.8,4.1-0.4C41.9,3,43,3.9,43.7,5.2c0.7,1.3,0.8,2.7,0.4,4.1
+                      c-0.4,1.2-1.1,2.2-2.2,2.9H29.4C30.5,9.6,33,5,36.5,3z M11.7,5.2C13.2,2.6,16.4,1.6,19,3c3.5,1.9,6,6.6,7.1,9.1H13.5
+                      C11.2,10.7,10.4,7.6,11.7,5.2z M26.5,27.8v13.7H6.4V27.8H26.5z M6.4,53.9v-10h20.2v13.7H10C8,57.6,6.4,55.9,6.4,53.9z M45.5,57.6
+                      H28.9V43.9h20.2v10C49.1,55.9,47.5,57.6,45.5,57.6z M49.1,41.5H28.9V27.8h20.2V41.5z M53.1,24.7c0,0.4-0.3,0.7-0.7,0.7h-2
+                      c0,0,0,0,0,0s0,0,0,0H27.7c0,0,0,0,0,0s0,0,0,0H5.2c0,0,0,0,0,0s0,0,0,0h-2c-0.4,0-0.7-0.3-0.7-0.7v-9.4c0-0.4,0.3-0.7,0.7-0.7h49.2
+                      c0.4,0,0.7,0.3,0.7,0.7V24.7z"/>
+                    </svg>
                     <p class="gift__text">Закажите все и получите чехол для кота в подарок!</p>
                 </a>
             </div>
@@ -145,7 +282,7 @@
       </section>
     </main>
     <section class="contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__wrapper contacts__wrapper--color">
         <div class="contacts__info">
           <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
           <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
