--- a/source/index.html
+++ b/source/index.html
@@ -41,11 +41,13 @@
         <a class="intro__link button" href="#">Подобрать программу</a>
       </div>
     </section>
+    <div class="background-desktop"></div>
     <section class="programs">
       <div class="programs__wrapper">
         <h2 class="visually-hidden">Программы питания</h2>
         <ul class="programs__list">
           <li class="programs__item programs__item--slim">
+            <div class="programs__image programs__image--slim">
               <svg  width="35" height="49" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 70 97" style="enable-background:new 0 0 70 97;" xml:space="preserve">
                 <g><title>Иконка программы похудения</title>
                   <path
@@ -63,12 +65,14 @@
                   c-0.5-0.3-0.8-0.6-0.9-1.1c-0.3-1.4-0.7-2.8-1.3-4.2C55.9,1,55.6,0.4,54.8,0z"/>
                 </g>
               </svg>
-            <h3 class="programs__title">Похудение</h3>
+            </div>
+            <h3 class="programs__title programs__title--slim">Похудение</h3>
             <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора
               на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес </p>
             <a class="programs__catalog button" href="#">Каталог Slim<span>&#8594;</span></a>
           </li>
           <li class="programs__item programs__item--pro">
+              <div class="programs__image programs__image--pro">
               <svg width="67" height="28" version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 134 56" style="enable-background:new 0 0 134 56;" xml:space="preserve">
                 <g><title>Иконка программы набора веса</title>
                   <path
@@ -93,7 +97,8 @@
                   c4,0.8,8,1.8,11.9,2.8c2.2,0.5,4.7,0.3,7-0.2c4.4-1,8.9-1.9,13.4-2c3-0.1,5.9,0.4,8.6,1.7C123.6,3.9,123.6,3.9,123.1,5.8z"/>
                 </g>
               </svg>
-            <h3 class="programs__title">Набор массы</h3>
+            </div>
+            <h3 class="programs__title programs__title--pro">Набор массы</h3>
             <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro
               поможет вашему коту нарастить необходимые мыщцы!</p>
             <a class="programs__catalog button" href="#">Каталог Pro<span>&#8594;</span></a>
@@ -106,7 +111,9 @@
         <h2 class="about__title">Как это работает</h2>
         <ul class="about__list">
           <li class="about__item about__item--useful">
-            <img class="about__image" src="img/advantage-leaf@1x.png" width="60" height="60" alt="листик">
+            <div class="about__image">
+            <img src="img/advantage-leaf@1x.png" width="60" height="60" alt="листик">
+            </div>
             <p class="about__description">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="about__item about__item--powder">
@@ -125,18 +132,24 @@
       </div>
     </section>
     <section class="example">
+
+      <h2 class="example__title">Живой пример</h2>
+      <div class="example__positioner">
       <div class="example__wrapper">
-        <h2 class="example__title">Живой пример</h2>
+        <div class="example__wrap-text">
         <p class="example__description">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy
           Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнеиу спит 16
           часов в день.</p>
+        <div class="example__info">
         <p class="example__stats"><span class="example__weight"> 5 кг <span class="example__legend">снижение веса</span></span><span class="example__weight"> 60 дней <span
             class="example__legend">затрачено времени</span></span></p>
         <!---    <p class="example__stats"><fieldset class="example__weight"> 5 кг <legend class="example__legend">снижение веса</legend></fieldset><fieldset class="example__weight"> 60 дней <legend
               class="example__legend">затрачено времени</legend></fieldset></p>-->
         <small class="example__text">
-          Затраты на питание: 15000руб.
+          <span>Затраты на питание:</span><span> 15000руб.</span>
         </small>
+      </div>
+      </div>
       </div>
         <div class="slider">
           <div class="slider__wrapper">
@@ -147,6 +160,7 @@
           </div>
         </div>
         </div>
+      </div>
     </section>
   </main>
   <section class="contacts">
