--- a/source/catalog.html
+++ b/source/catalog.html
@@ -39,7 +39,11 @@
                 <ul class="catalog__list">
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500chiken">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.png, img/chicken-small-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.png, img/chicken-small-tablet@2x.png 2x">
+                            <img class="catalog__image" src="img/chicken-small-mobile@1x.jpg" srcset="img/chicken-small-mobile@2x.jpg 2x" alt="Упаковка корма pro500chiken">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <table class="catalog__text">
@@ -62,7 +66,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000chiken">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.png, img/chicken-big-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.png, img/chicken-big-tablet@2x.png 2x">
+                            <img class="catalog__image catalog__image--big" src="img/chicken-big-mobile@1x.jpg" srcset="img/chicken-big-mobile@2x.jpg 2x" alt="Упаковка корма pro1000chiken">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <table class="catalog__text">
@@ -85,7 +93,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro500fish">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.png, img/fish-small-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.png, img/fish-small-tablet@2x.png 2x">
+                            <img class="catalog__image" src="img/fish-small-mobile@1x.jpg" srcset="img/fish-small-mobile@2x.jpg 2x" alt="Упаковка корма pro500fish">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 500 г</h1>
                             <table class="catalog__text">
@@ -108,7 +120,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма pro1000fish">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.png, img/fish-big-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.png, img/fish-big-tablet@2x.png 2x">
+                            <img class="catalog__image catalog__image--big" src="img/fish-big-mobile@1x.jpg" srcset="img/fish-big-mobile@2x.jpg 2x" alt="Упаковка корма pro1000fish">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Pro 1000 г</h1>
                             <table class="catalog__text">
@@ -131,7 +147,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.png, img/buckwheat-small-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.png, img/buckwheat-small-tablet@2x.png 2x">
+                            <img class="catalog__image" src="img/buckwheat-small-mobile@1x.jpg" srcset="img/buckwheat-small-mobile@2x.jpg 2x" alt="Упаковка корма slim500">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
                             <table class="catalog__text">
@@ -154,7 +174,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim1000">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.png, img/buckwheat-big-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.png, img/buckwheat-big-tablet@2x.png 2x">
+                            <img class="catalog__image catalog__image--big" src="img/buckwheat-big-mobile@1x.jpg" srcset="img/buckwheat-big-mobile@2x.jpg 2x" alt="Упаковка корма slim1000">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 1000 г</h1>
                             <table class="catalog__text">
@@ -177,7 +201,11 @@
                     </li>
                     <li>
                         <article class="catalog__item">
-                            <img class="catalog__image" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Упаковка корма slim500рис">
+                            <picture>
+                                <source media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.png, img/rice-small-desktop@2x.png 2x">
+                                <source media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.png, img/rice-small-tablet@2x.png 2x">
+                            <img class="catalog__image" src="img/rice-small-mobile@1x.jpg" srcset="img/rice-small-mobile@2x.jpg 2x" alt="Упаковка корма slim500рис">
+                            </picture>
                             <div class="catalog__description">
                             <h1 class="catalog__title">Cat Energy Slim 500 г</h1>
                             <table class="catalog__text">
@@ -289,7 +317,11 @@
         </div>
       </div>
       <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
+      <picture>
+          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+      <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
+      </picture>
     </section>
     <footer class="footer">
         <div class="footer__wrapper">
