--- a/source/index.html
+++ b/source/index.html
@@ -12,7 +12,11 @@
   <header class="header">
     <div class="header__wrapper">
     <a class="header__logo">
-      <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
+        <picture>
+            <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+            <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy">
+        </picture>
     </a>
     <nav class="navigation navigation--nojs">
       <button class="navigation__toggle" type="button">
@@ -37,7 +41,11 @@
       <div class="intro__wrapper">
         <h1 class="intro__slogan">Функциональное питание для котов</h1>
         <p class="intro__text">Занялся собой? Займись котом!</p>
-        <img class="intro__image" src="img/index-can-mobile@1x.png" width="280" height="270" alt="Упаковка корма">
+        <picture>
+            <source media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.png, img/index-can-desktop@2x.png 2x">
+            <source media="(min-width: 768px)" srcset="img/index-can-tablet@1x.jpg, img/index-can-tablet@2x.jpg 2x">
+        <img class="intro__image" src="img/index-can-mobile@1x.png" srcset="img/index-can-mobile@2x.png 2x" alt="Упаковка корма">
+        </picture>
         <a class="intro__link button" href="#">Подобрать программу</a>
       </div>
     </section>
@@ -111,20 +119,26 @@
         <ul class="about__list">
           <li class="about__item about__item--useful">
             <div class="about__image">
-            <img src="img/advantage-leaf@1x.png" width="60" height="60" alt="листик">
+            <img src="img/advantage-leaf@1x.png" srcset="img/advantage-leaf@2x.png 2x" alt="листик">
             </div>
             <p class="about__description">Функциональное питание содержит только полезные питательные вещества.</p>
           </li>
           <li class="about__item about__item--powder">
-            <img class="about__image" src="img/advantage-powder@1x.png" width="60" height="60" alt="порошок">
+            <div class="about__image">
+            <img src="img/advantage-powder@1x.png" srcset="img/advantage-powder@2x.png 2x" alt="порошок">
+            </div>
             <p class="about__description">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</p>
           </li>
           <li class="about__item about__item--eating">
-            <img class="about__image" src="img/advantage-dining@1x.png" width="60" height="60" alt="прием пищи">
+            <div class="about__image">
+            <img src="img/advantage-dining@1x.png" srcset="img/advantage-dining@2x.png 2x" alt="прием пищи">
+            </div>
             <p class="about__description">Замените один-два приемы обычной еды на наше функциональное питание.</p>
           </li>
           <li class="about__item about__item--month">
-            <img class="about__image" src="img/advantage-clock@1x.png" width="60" height="60" alt="время">
+            <div class="about__image">
+            <img src="img/advantage-clock@1x.png" srcset="img/advantage-clock@2x.png 2x" alt="время">
+            </div>
             <p class="about__description">Уже через месяц наслаждайтесь измениниями к лучшему вашего питомца!</p>
           </li>
         </ul>
@@ -133,6 +147,7 @@
     <section class="example">
 
       <h2 class="example__title">Живой пример</h2>
+      <div class="example__color">
       <div class="example__positioner">
       <div class="example__wrapper">
         <div class="example__wrap-text">
@@ -152,7 +167,11 @@
       </div>
         <div class="slider">
           <div class="slider__wrapper">
-          <img class="slider__image" src="img/before-mobile@1x.png" width="311" height="232" alt="Кот до">
+              <picture>
+                  <source media="(min-width: 1300px)" srcset="img/before-desktop@1x.png, img/before-desktop@2x.png 2x">
+                  <source media="(min-width: 768px)" srcset="img/before-tablet@1x.png, img/before-tablet@2x.png 2x">
+              <img class="slider__image" src="img/before-mobile@1x.png" srcset="img/before-mobile@2x.png 2x" alt="Кот до">
+              </picture>
           <div class="slider__toggles">
             <button class="slider__toggle" type="button">Было</button>
             <button class="slider__toggle" type="button">Стало</button>
@@ -160,6 +179,7 @@
         </div>
         </div>
       </div>
+    </div>
     </section>
   </main>
   <section class="contacts">
@@ -170,7 +190,11 @@
         </div>
       </div>
       <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
+      <picture>
+          <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+          <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+      <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
+      </picture>
   </section>
   <footer class="footer">
     <div class="footer__wrapper">
