--- a/source/form.html
+++ b/source/form.html
@@ -12,7 +12,11 @@
   <header class="header">
     <div class="header__wrapper">
     <a class="header__logo" href="index.html">
-      <img class="header__logo-image" src="img/logo-mobile.svg" width="200" height="50" alt="Cat Energy">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
+        <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
+        <img class="header__logo-image" src="img/logo-mobile.svg" alt="Cat Energy">
+      </picture>
     </a>
     <nav class="navigation navigation--nojs">
       <button class="navigation__toggle" type="button">
@@ -20,23 +24,26 @@
       </button>
       <ul class="navigation__list site-list">
         <li class="site-list__item">
-          <a class="site-list__link" href="index.html">Главная</a>
+          <a class="site-list__link site-list__link--color" href="index.html">Главная</a>
         </li>
         <li class="site-list__item">
-          <a class="site-list__link" href="catalog.html">Каталог продукции</a>
+          <a class="site-list__link site-list__link--color" href="catalog.html">Каталог продукции</a>
         </li>
         <li class="site-list__item site-list__item--active">
-          <a class="site-list__link">Подбор программы</a>
+          <a class="site-list__link site-list__link--color">Подбор программы</a>
         </li>
       </ul>
     </nav>
     </div>
 </header>
     <form class="form" action="https://echo.htmlacademy.ru" method="post">
-      <div class="form__wrapper">
-      <h2 class="form__name">Подбор программы</h2>
-      <div class="form__positioner">
+
+      <h1 class="form__name">Подбор программы</h1>
+
+
+      <div class="form__indentation">
       <p class="form__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
+      <div class="form__place"><div class="form__wrapper">
         <div class="form__block">
             <label class="form__title" for="name">Имя:<sup>*</sup></label>
             <input class="form__text" type="text" name="name" id="name" placeholder="Барсик">
@@ -49,27 +56,31 @@
             <label class="form__title" for="age">Возраст (лет):<sup>*</sup></label>
             <input class="form__text" type="text" name="age" id="age" placeholder="7">
         </div>
-        <fieldset class="form__column">
+      </div>
+
+        <fieldset class="form__column form__column--program">
             <ul class="form__list form__list--program">
                 <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="loseweight" id="loseweight" checked>
-                    <label class="form__checkbox-label" tabindex="0" for="loseweight">Похудение</label>
+                    <label class="form__checkbox-label form__label--radio" tabindex="0" for="loseweight">Похудение</label>
                 </li>
                 <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="masses" id="masses">
-                    <label class="form__checkbox-label" tabindex="0" for="masses">Набор массы</label>
+                    <label class="form__checkbox-label form__label--radio" tabindex="0" for="masses">Набор массы</label>
                 </li>
                 <li class="form__item">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="advice" id="advice">
-                    <label class="form__checkbox-label" tabindex="0" for="advice">Не знаю (нужен ваш совет)</label>
+                    <label class="form__checkbox-label form__label--radio" tabindex="0" for="advice">Не знаю (нужен ваш совет)</label>
                 </li>
             </ul>
         </fieldset>
       </div>
+      </div>
         <fieldset class="form__column">
-            <legend class="form__headline">Контактные данные (владельца кота)</legend>
-            <div class="form__positioner">
-            <div class="form__block">
+
+            <div class="form__positioner form__positioner--contacts">
+            <h2 class="form__headline form__headline--contacts">Контактные данные (владельца кота)</h2>
+            <div class="form__block form__block--contacts">
                 <label class="form__title" for="email">E-mail<sup>*</sup>:</label>
                 <input class="form__text" type="text" name="email" id="email" placeholder="kuklachev@mail.ru">
                 <button class="form__email" type="button" aria-label="email">
@@ -79,7 +90,7 @@
                     </svg>
                 </button>
             </div>
-            <div class="form__block">
+            <div class="form__block form__block--contacts">
                 <label class="form__title" for="number">Телефон<sup>*</sup>:</label>
                 <input class="form__text" type="text" name="number" id="number" placeholder="8(960)900-60-90">
                 <button class="form__phone" type="button" aria-label="Телефон">
@@ -96,72 +107,96 @@
             </div>
           </div>
         </fieldset>
-        <h2 class="form__headline">Комментарий</h2>
+
         <div class="form__positioner">
+        <h2 class="form__headline">Комментарий</h2>
         <textarea class="form__comment" cols="40" rows="5" type="text" placeholder="Расскажите обо всех повадках кота"></textarea>
         </div>
-      <h2 class="form__headline">Дополнительно</h2>
-        <fieldset class="form__column">
+
+      <div class="form__positioner form__positioner--goods">
+        <h2 class="form__headline">Дополнительно</h2>
+        <fieldset class="form__column form__column--goods">
             <ul class="form__list form__list--goods">
-                <li class="list__item">
+                <li class="list__item list__item--goods">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="sweetener" id="sweetener" checked>
-                    <label class="form__checkbox-label" tabindex="0" for="sweetener">Сахарозаменитель</label>
+                    <label class="form__checkbox-label form__checkbox-label--add" tabindex="0" for="sweetener">Сахарозаменитель</label>
                 </li>
-                <li class="list__item">
+                <li class="list__item list__item--goods">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="water" id="water">
-                    <label class="form__checkbox-label" tabindex="0" for="water">Питьевая вода</label>
+                    <label class="form__checkbox-label form__checkbox-label--add" tabindex="0" for="water">Питьевая вода</label>
                 </li>
-                <li class="list__item">
+                <li class="list__item list__item--goods">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="milk" id="milk">
-                    <label class="form__checkbox-label" tabindex="0" for="milk">Молоко</label>
+                    <label class="form__checkbox-label form__checkbox-label--add" tabindex="0" for="milk">Молоко</label>
                 </li>
-                <li class="list__item">
+                <li class="list__item list__item--goods">
                     <input class="form__checkbox" type="checkbox" tabindex="-1" name="vitamins" id="vitamins">
-                    <label class="form__checkbox-label" tabindex="0" for="vitamins">Витамины</label>
+                    <label class="form__checkbox-label form__checkbox-label--add" tabindex="0" for="vitamins">Витамины</label>
                 </li>
             </ul>
         </fieldset>
+
+        <div class="form__footer">
         <button class="form__button button" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
         <small class="form__legend">
             <sup>*</sup> — Обязательные поля
         </small>
+        </div>
       </div>
     </form>
     </main>
     <section class="contacts">
-      <div class="contacts__wrapper">
+      <div class="contacts__wrapper contacts__wrapper--color">
         <div class="contacts__info">
           <h2 class="contacts__title">Приглашаем к сотрудничеству диллеров!</h2>
           <p class="contacts__text">ул.Большая Конюшенская , д.19/8 Санкт-Петербург</p>
         </div>
       </div>
       <!--<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533277!2d30.320858716096975!3d59.93871648187614!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1555329724939!5m2!1sru!2sru" width="320" height="360" frameborder="0" style="border:0" allowfullscreen></iframe>-->
-      <img class="contacts__image" src="img/bg-map-mobile@1x.png" width="320" height="360" alt="Карта">
+      <picture>
+        <source media="(min-width: 1300px)" srcset="img/bg-map-desktop@1x.png, img/bg-map-desktop@2x.png 2x">
+        <source media="(min-width: 768px)" srcset="img/bg-map-tablet@1x.png, img/bg-map-tablet@2x.png 2x">
+    <img class="contacts__image" src="img/bg-map-mobile@1x.png" srcset="img/bg-map-mobile@2x.png 2x" alt="Карта">
+    </picture>
     </section>
     <footer class="footer">
-        <div class="footer__wrapper">
-            <a class="footer__logo">
-                <img class="footer__logo-image" src="img/logo-footer.svg" width="101" height="18" alt="Cat Energy">
-            </a>
-            <div class="social">
-                <ul class="social__list">
-                    <li class="social__item">
-                        <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                          <img class="social__icon" src="img/icon-vk.svg" width="22" height="12" alt="Мы в Вконтакте"></a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-                          <img class="social__icon" src="img/icon-insta.svg" width="16" height="16" alt="Мы в Инстаграме"></a>
-                    </li>
-                    <li class="social__item">
-                        <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-                          <img class="social__icon" src="img/icon-fb.svg" width="10" height="19" alt="Мы в Фейсбуке"></a>
-                    </li>
-            </div>
-            <div class="copyright">
-                <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy">HTML Academy
-                    <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
-                </a>
-            </div>
+      <div class="footer__wrapper">
+        <a class="footer__logo">
+          <img class="footer__logo-image" src="img/logo-footer.svg" width="128" height="24" alt="Cat Energy">
+        </a>
+        <div class="social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/icon-vk.svg">
+                  <img class="social__icon social__icon--vk" src="img/icon-vk-mobile.svg" alt="Мы в Вконтакте">
+                </picture>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/icon-insta.svg">
+                  <img class="social__icon social__icon--inst" src="img/icon-insta-mobile.svg" alt="Мы в Инстаграме">
+                </picture>
+              </a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
+                <picture>
+                  <source media="(min-width: 768px)" srcset="img/icon-fb.svg">
+                  <img class="social__icon social__icon--fcb" src="img/icon-fb-mobile.svg" alt="Мы в Фейсбуке">
+                </picture>
+              </a>
+            </li>
+          </ul>
         </div>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" alt="Разработано HTML Academy"><div class="copyright__link-text">HTML
+            Academy</div>
+            <img class="copyright__logo-image" src="img/htmlacademy.svg" width="27" height="34" alt="HTML Academy">
+          </a>
+      </div>
     </footer>
+  </body>
+  </html>
