--- a/source/catalog.html
+++ b/source/catalog.html
@@ -344,27 +344,15 @@
           <ul class="social__list">
             <li class="social__item">
               <a class="social__link social__link--vkontakte" href="https://vk.com/htmlacademy">
-                <picture>
-                  <source media="(min-width: 768px)" srcset="img/icon-vk.svg">
-                  <img class="social__icon social__icon--vk" src="img/icon-vk-mobile.svg" alt="Мы в Вконтакте">
-                </picture>
-              </a>
+                <img class="social__icon" src="img/icon-vk.svg" width="22" height="12" alt="Мы в Вконтакте"></a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--instagram" href="https://www.instagram.com/htmlacademy">
-                <picture>
-                  <source media="(min-width: 768px)" srcset="img/icon-insta.svg">
-                  <img class="social__icon social__icon--inst" src="img/icon-insta-mobile.svg" alt="Мы в Инстаграме">
-                </picture>
-              </a>
+                <img class="social__icon" src="img/icon-insta.svg" width="16" height="16" alt="Мы в Инстаграме"></a>
             </li>
             <li class="social__item">
               <a class="social__link social__link--facebook" href="https://www.facebook.com/htmlacademy">
-                <picture>
-                  <source media="(min-width: 768px)" srcset="img/icon-fb.svg">
-                  <img class="social__icon social__icon--fcb" src="img/icon-fb-mobile.svg" alt="Мы в Фейсбуке">
-                </picture>
-              </a>
+                <img class="social__icon" src="img/icon-fb.svg" width="10" height="19" alt="Мы в Фейсбуке"></a>
             </li>
           </ul>
         </div>
